--- a/ReadMe
+++ b/ReadMe
@@ -9,6 +9,9 @@ E - swap sides
 If you die, just press R to restart.  The game increases pace and obstacle density over time for added difficulty.
 
 
+Screenshot:
+http://i.imgur.com/qpgB94E.png
+
 
 Sources used:
 
